tests/should-fail/crashes/shouldnt-crash-16.j
function a takes nothing returns integer
	if true then
		return 0
	elseif false then
	else
		return 1
	local
endfunction
